# crud

./: exemplo1.py  main.py  pyproject.toml
